# rag-fastapi-lc

./: .env.example  .gitignore  README.md  pyproject.toml
app/: container.py  main.py  settings.py
docs/: architecture-mermaid.md
domain/services/: llm_provider.py
infrastructure/embeddings/: provider.py
infrastructure/llm/: langchain_llm_provider.py  langchain_provider.py
infrastructure/loaders/: pdf_loader.py
infrastructure/observability/: langsmith.py
infrastructure/vectorstores/: chroma_store.py
interface_adapters/web/api/v1/: documents.py  echo.py  rag.py
scripts/: eval_retrieval.py
tests/: test_echo.py  test_ingest.py  test_rag_generate_llm.py  test_rag_integration_llm.py  test_rag_retrieval.py
use_cases/: ingest_documents.py  query_rag.py  query_simple.py
